fix logo image on narrow screens

--- a/src/components/Logo/Logo.css
+++ b/src/components/Logo/Logo.css
@@ -4,4 +4,5 @@
   & path {
     fill: var(--marketplaceColor);
   }
+  height: 40px;
 }
